compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/TraitClassObjectField.kt
// TraitClassObjectField

interface TraitClassObjectField {
    companion object {
        const val x: String = ""
        private val y: String? = { "" }()
    }
}